--- a/VolunteerProject/VolunteerProject.csproj
+++ b/VolunteerProject/VolunteerProject.csproj
@@ -200,6 +200,10 @@
     <Compile Include="Migrations\201807111431475_added context.Designer.cs">
       <DependentUpon>201807111431475_added context.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201807111733560_added controllers.cs" />
+    <Compile Include="Migrations\201807111733560_added controllers.Designer.cs">
+      <DependentUpon>201807111733560_added controllers.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Event.cs" />
     <Compile Include="Models\User.cs" />
@@ -296,6 +300,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201807111431475_added context.resx">
       <DependentUpon>201807111431475_added context.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201807111733560_added controllers.resx">
+      <DependentUpon>201807111733560_added controllers.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
