--- a/VolunteerProject/VolunteerProject.csproj
+++ b/VolunteerProject/VolunteerProject.csproj
@@ -189,7 +189,9 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Controllers\CommentsController.cs" />
     <Compile Include="Controllers\EventsController.cs" />
+    <Compile Include="Controllers\ForumsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
@@ -209,7 +211,9 @@
       <DependentUpon>201807192306422_made a connection.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\Comment.cs" />
     <Compile Include="Models\Event.cs" />
+    <Compile Include="Models\Forum.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\VolunteerContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
