--- a/VolunteerProject/VolunteerProject.csproj
+++ b/VolunteerProject/VolunteerProject.csproj
@@ -217,9 +217,11 @@
       <DependentUpon>201807192306422_made a connection.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\Chat.cs" />
     <Compile Include="Models\Comment.cs" />
     <Compile Include="Models\Event.cs" />
     <Compile Include="Models\Forum.cs" />
+    <Compile Include="Models\Message.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\VolunteerContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
